k8s/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-keycloak
  hostnames:
    - keycloak.ass-nss.jkuzel02.online
  rules:
    - backendRefs:
        - name: keycloak
          port: 80
